--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 * {
   box-sizing: border-box;
 }
 
 body {
-  background-color: blue;
-  font-family: "Roboto", Sans-Serif;
+  background-color: rgb(255, 255, 255);
+  font-family: 'Roboto', Sans-Serif;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -16,20 +16,26 @@ body {
 }
 
 div {
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: rgba(235, 226, 226, 0.2);
   position: absolute;
   padding: 10px 20px;
   font-size: 16px;
   bottom: 20px;
 }
+.track {
+  background-color: rgb(74, 72, 75);
+  border-radius: 10px;
+}
 
 input {
-  background-color: blue;
+  /* background-color: rgb(255, 255, 255); */
+  border-radius: 10px;
   width: 50px;
   padding: 5px;
   border: none;
   font-size: 18px;
   text-align: center;
+  
 }
 
 input:focus {
